--- a/templates/signup.html
+++ b/templates/signup.html
@@ -37,7 +37,7 @@
 
                     <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm">
                         
-                        <a href="signin.html" class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white">Login</a>
+                        <a href="/signin" class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white">Login</a>
                     </div>
 
                 </div>
@@ -49,14 +49,16 @@
         <div>
             <div class="lg:p-12 max-w-md max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-">
                 <h1 class="lg:text-3xl text-xl font-semibold mb-6"> Sign Up</h1>
-                <style>
-                    h5{
-                        color: red;
-                    }
-                </style>
-                {% for mess in messages  %}
-                    <h5>{{mess}}</h5>
-                {% endfor %}
+                <div>
+                    <style>
+                        h5{
+                            color: red;
+                        }
+                    </style>
+                    {% for mess in messages  %}
+                        <h5>{{mess}}</h5>
+                    {% endfor %}
+                </div>
                 <!--<p class="mb-2 text-black text-lg"> Register to manage your account </p>-->
                 <form action="" method="POST">
                     {% csrf_token %}
@@ -77,7 +79,7 @@
                     </div> {% endcomment %}
                     <button type="submit" class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full">Sign Up</button>
                     <div class="text-center mt-5 space-x-2">
-                        <p class="text-base"> Do you have an account? <a href="form-login.html"> Log In </a></p>
+                        <p class="text-base"> Do you have an account? <a href="/signin"> Log In </a></p>
                     </div>
                 </form>
             </div>
