--- a/templates/index.html
+++ b/templates/index.html
@@ -72,19 +72,25 @@
                                         </svg>
                                     </div>
 
-                                    <p class="my-3 leading-6"> Upload pics or videos <br> please upload her ..
-                                    </p>
-                                    <div uk-form-custom>
-                                        <input type="file">
-                                        <a href="#" class="button soft-warning small"> Choose file</a>
-                                    </div>
-    
-                                    <a href="#" class="uk-text-muted mt-3 uk-link"
+                                    <form action="upload/" method="POST" enctype="multipart/form-data" >
+                                    {% csrf_token %}
+                                        <p class="my-3 leading-6"> Upload pics
+                                        </p>
+                                        <div>
+                                            <input type="file" name="image_upload">
+                                            <!-- <a href="#" class="button soft-warning small"> Choose file</a> -->
+                                            <textarea class="button soft-warning small" name="caption" placeholder="caption..." ></textarea>
+                                            <br>
+                                            <button class="button bg-blue-700" type="submit" >Upload</button>
+                                        </div>
+                                    </form>
+
+                                    <!-- <a href="#" class="uk-text-muted mt-3 uk-link"
                                         uk-toggle="target: .choose-upload ;  animation: uk-animation-slide-right-small, uk-animation-slide-left-medium; queued: true">
-                                        Or Import Video </a>
+                                        Or Import Video </a> -->
                                 </div>
     
-                                <div class="uk-flex uk-flex-column choose-upload" hidden>
+                                {% comment %} <div class="uk-flex uk-flex-column choose-upload" hidden>
                                     <div class="mx-auto flex flex-col h-24 items-center justify-center relative w-full rounded-lg">
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-12">
                                             <path fill-rule="evenodd" d="M2 9.5A3.5 3.5 0 005.5 13H9v2.586l-1.293-1.293a1 1 0 00-1.414 1.414l3 3a1 1 0 001.414 0l3-3a1 1 0 00-1.414-1.414L11 15.586V13h2.5a4.5 4.5 0 10-.616-8.958 4.002 4.002 0 10-7.753 1.977A3.5 3.5 0 002 9.5zm9 3.5H9V8a1 1 0 012 0v5z" clip-rule="evenodd" />
@@ -92,17 +98,16 @@
                                     </div>
                                     <p class="my-3 leading-6"> Import videos from YouTube <br> Copy / Paste your video link here </p>
                                     <form class="uk-grid-small" uk-grid>
-                                        {% csrf_token %}
                                         <div class="uk-width-expand">
                                             <input type="text" class="uk-input uk-form-small  bg-gray-200 " style="box-shadow:none" placeholder="Paste link">
                                         </div>
                                         <div class="uk-width-auto"> <button type="submit" class="button soft-warning -ml-2">
                                                 Import </button> </div>
                                     </form>
-                                    <a href="#" class="uk-text-muted mt-3 uk-link"
+                                   <a href="#" class="uk-text-muted mt-3 uk-link"
                                         uk-toggle="target: .choose-upload ; animation: uk-animation-slide-left-small, uk-animation-slide-right-medium; queued: true">
                                         Or Upload Video </a>
-                                </div>
+                                </div> {% endcomment %}
     
                             </div>
                             <div class="px-4 py-3 -mx-5 -mb-4 mt-5 border-t text-sm">
@@ -112,7 +117,7 @@
                         
                          <!-- Notification -->
 
-                        <a href="#" class="header-links-item">
+                        {% comment %} <a href="#" class="header-links-item">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none"><path d="M12 22a2.02 2.02 0 0 1-2.01-2h4a2.02 2.02 0 0 1-.15.78a2.042 2.042 0 0 1-1.44 1.18h-.047A1.922 1.922 0 0 1 12 22zm8-3H4v-2l2-1v-5.5a8.065 8.065 0 0 1 .924-4.06A4.654 4.654 0 0 1 10 4.18V2h4v2.18c2.579.614 4 2.858 4 6.32V16l2 1v2z" fill="currentColor"/></g></svg>
                         </a>
                         <div uk-drop="mode: click;offset: 4" class="header_dropdown">
@@ -163,12 +168,12 @@
 
                             </ul>
                             <a href="#" class="see-all">See all</a>
-                        </div>
+                        </div> {% endcomment %}
 
                         <!-- profile -->
 
                         <a href="#">
-                            <img src="{% static 'assets/images/avatars/avatar-2.jpg' %}" class="header-avatar" alt="">
+                            <img src="{{user_profile.profileimg.url}}" class="header-avatar" alt="">
                         </a>
                         <div uk-drop="mode: click;offset:9" class="header_dropdown profile_dropdown border-t">
                             <ul>
