--- a/templates/index.html
+++ b/templates/index.html
@@ -196,7 +196,7 @@
                     <div class="space-y-5 flex-shrink-0 lg:w-7/12">
 
                         <!-- post 1-->
-                         {% for post in posts %}
+                         {% for post in post_list %}
                         <div class="bg-white shadow rounded-md  -mx-2 lg:mx-0">
                             
                             <!-- post header-->
@@ -204,10 +204,10 @@
                                 <div class="flex flex-1 items-center space-x-4">
                                     <a href="#">
                                         <div class="bg-gradient-to-tr from-yellow-600 to-pink-600 p-0.5 rounded-full">  
-                                            <img src="{{ user_profile.profileimg.url }}" class="bg-gray-200 border border-white rounded-full w-8 h-8">
+                                            <img src="{{ post.profile_image.url }}" class="bg-gray-200 border border-white rounded-full w-8 h-8">
                                         </div>
                                     </a>
-                                    <span class="block capitalize font-semibold "> {{ post.user }} </span>
+                                    <span class="block capitalize font-semibold "> {{ post.post.user }} </span>
                                 </div>
                               <div>
                                 <a href="#"> <i class="icon-feather-more-horizontal text-2xl hover:bg-gray-200 rounded-full p-2 transition -mr-1 "></i> </a>
@@ -249,11 +249,11 @@
                             </div>
                             
                             <div class = "flex justify-between items-center px-4 py-3 caption">
-                                <p class="text-xl">{{ post.caption }}</p>
+                                <p class="text-xl whitespace-normal">{{ post.post.caption }}</p>
                             </div>
                             <div uk-lightbox>
-                                <a href="{{ post.image.url }}">  
-                                    <img src="{{ post.image.url }}" alt="">
+                                <a href="{{ post.post.image.url }}">  
+                                    <img src="{{ post.post.image.url }}" alt="">
                                 </a>
                             </div>
                             
@@ -261,13 +261,13 @@
                             <div class="py-3 px-4 space-y-3"> 
                                
                                 <div class="flex space-x-4 lg:font-bold">
-                                    <a href="/liked-post/?post_id={{ post.id }}" class="flex items-center space-x-2">
+                                    <a href="/liked-post/?post_id={{ post.post.id }}" class="flex items-center space-x-2">
                                         <div class="p-2 rounded-full text-black">
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" width="25" height="25" class="">
                                                 <path d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z" />
                                             </svg>
                                         </div>
-                                        <p>{{ post.no_of_likes }}</p>
+                                        <p>{{ post.post.no_of_likes }}</p>
                                     </a>
                                     <a href="#" class="flex items-center space-x-2">
                                         <div class="p-2 rounded-full text-black">
