--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,7 +27,8 @@
 	<section>
 			<div class="feature-photo">
 				<figure><img src="{% static 'images/resources/timeline-1.jpg' %}" alt=""></figure>
-				<form>
+				<form action="{% url 'follow' %}" method="POST">
+                    {% csrf_token %}
 					<div class="add-btn">
 					<span style="color: white; font-size: 27px; margin-right: 520px;"><b><u><a href="/">Home</a></u></b></span>
                     {% if user_post_count == 0 %} 
@@ -39,7 +40,14 @@
                     {% endif %}
 					<span style="color: white; font-size: 27px;"><b>1.7m followers</b></span>
 					<span style="color: white; font-size: 27px;"><b>3.5k following</b></span>
-					<a href="" title="" data-ripple=""><button style="background-color: #ffc0cb; border: #ffc0cb;">Follow</button></a>
+                    <input type="hidden" value="{{ user.username }}" name="follower">
+                    <input type="hidden" value="{{ user_object.username }}" name="user">
+                    
+                    {% if user_object.username == user.username %}
+                        <a href="{% url 'settings' %}" data-ripple=""><button type="button" style="background-color: #ffc0cb; border: #ffc0cb;">Account Settings</button></a>
+                    {% else %} 
+                        <a title="" data-ripple=""><button type="submit" style="background-color: #ffc0cb; border: #ffc0cb;">{{ button_text }}</button></a>
+                    {% endif %}
 					
 					</div>
 				</form>
@@ -153,7 +161,7 @@
 
 	
 	
-	<script data-cfasync="false" src="{% static '../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js' %}"></script><script src="js/main.min.js"></script>
+	<script data-cfasync="false" src="{% static '../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js' %}"></script><script src="{% static 'js/main.min.js' %}"></script>
 	<script src="{% static 'js/script.js' %}"></script>
 
 </body>	
