--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'assets/css/uikit.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/tailwind.css' %}">
+    
 </head>
 
 <body>
@@ -32,17 +33,27 @@
                         <!--<div class="triger" uk-toggle="target: #wrapper ; cls: sidebar-active">
                             <i class="uil-bars"></i>
                         </div>-->
-
-                        <div class="header_search">
-                            <input type="text" placeholder="Search for username..">
-                            <div class="icon-search">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                    stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                                </svg>
+                        <form action="{% url 'search' %}" method="POST">
+                            {% csrf_token %}
+                            <div class="left-side">
+                                <!-- Logo -->
+                                <div id="logo" class=" uk-hidden@s">
+                                    <a href="home.html">
+                                        <b><h1 style="text-transform: uppercase;">Social Book</h1></b>
+                                    </a>
+                                </div>
+        
+                                <!--<div class="triger" uk-toggle="target: #wrapper ; cls: sidebar-active">
+                                    <i class="uil-bars"></i>
+                                </div>-->
+        
+                                <!-- <div class="header_search"> -->
+                                    <input type="text" name="username" placeholder="Search for username..">&nbsp; &nbsp;
+                                    <button type="submit">Search</button>
+                                <!-- </div> -->
+        
                             </div>
-                        </div>
+                        </form>
 
                     </div>
                     <div class="right-side lg:pr-4">
@@ -427,8 +438,6 @@
     <script src="{% static 'assets/js/simplebar.js' %}"></script>
     <script src="{% static 'assets/js/custom.js' %}"></script>
 
-
-    <script src="{% static '../../unpkg.com/ionicons%405.2.3/dist/ionicons.js' %}"></script>
 </body>
 
 
