--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static './assets/css/message.css' %}">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>TVT Social</title>
  </head>
  <body>
@@ -313,8 +314,6 @@
                                     <button class="btn btn-primary" type="submit"><i class="fa-solid fa-paper-plane"></i></button>
                                 </form>
                             </div>
-                        
-                            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
                             <script>
                                 $('#like-{{ post.post.id }} li').on('click', function (e){
                                     e.preventDefault(); // Ngăn chặn hành động mặc định của liên kết
@@ -380,18 +379,18 @@
                     </div>
                     <div class="list-message">
                         {% for mess in messages_list %}
-                        	<div class="message">
-                            <div class="profile-pic">
-                                <img src="{{ mess.receiver_profile_img.url }}" />
-                                <div class="active"></div>
+                        	<div class="message" data-type="{{ mess.room }}">
+                                <div class="profile-pic">
+                                    <img src="{{ mess.receiver_profile_img.url }}" />
+                                    <div class="active"></div>
+                                </div>
+                                <div class="message-body">
+                                    <h5>{{ mess.receiver_name }}</h5>
+                                    <p class="text-muted">
+                                        lorem up........
+                                    </p>
+                                </div>
                             </div>
-                            <div class="message-body">
-                                <h5>{{ mess.receiver_name }}</h5>
-                                <p class="text-muted">
-                                    lorem up........
-                                </p>
-                            </div>
-                        </div>
                         {% endfor %}                     
                     </div>
                 </div>
