--- a/templates/home.html
+++ b/templates/home.html
@@ -525,7 +525,8 @@
                                 </div>
                                 <div class="inputText">
                                     <div class="inputTextDiv">
-                                        <input id="inputPostText" type="text" placeholder="Aa">
+                                        <input id="
+                                        " type="text" placeholder="Aa">
                                         <i class="fa-solid fa-face-smile"></i>
                                     </div>
                                     <i id="likePost" class="fa-solid fa-thumbs-up likeBtn"></i>
