--- a/templates/index.html
+++ b/templates/index.html
@@ -437,7 +437,7 @@
     <script src="{% static 'assets/js/uikit.js' %}"></script>
     <script src="{% static 'assets/js/simplebar.js' %}"></script>
     <script src="{% static 'assets/js/custom.js' %}"></script>
-
+</script>
 </body>
 
 
